quiz config updated, overflow fixed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,11 +2,12 @@ $color-pack: true;
 
 @import '~vuetify/src/styles/main.sass';
 
-
-body, html {
+body, html, #app {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
+
 .quizer-start {
   width: 100%;
   height: 100%;
